# vector-view

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  config.py  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  pyproject.toml.backup  requirements.txt  run_web.py  test_web.py  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
scripts/: install.sh  setup-dev.sh
src/: App.vue  main.js  style.css
src/components/: DatabaseView.vue  TableView.vue
src/services/: api.js  embeddingService.js
src/vector_view/: __init__.py  app.py  config.py  connections.py  database.py  routes.py  user_settings.py
src/vector_view/templates/: base.html  chunks.html  collections.html  connections.html  index.html  vectors.html
templates/: base.html  index.html  search.html  settings.html  vectors.html
tests/: __init__.py  test_connections.py  test_graceful_db.py  test_web.py
